# promptbeat-lite

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  highstar.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: cases.json
examples/suite/: golden-answer.txt  golden-check.json  support-answer.json
releases/: v0.1.0.md  v0.2.0.md  v0.2.1.md
src/promptbeat_lite/: cli.py
tests/: test_cli.py
