[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "promptbeat-lite"
version = "0.2.1"
description = "Run local-first prompt and agent regression checks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "alexzhu0" }]
keywords = ["ai-tools", "prompt-engineering", "evals", "testing", "cli", "llmops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development"
]

[project.scripts]
promptbeat-lite = "promptbeat_lite.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
